--- a/index.html
+++ b/index.html
@@ -1,15 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Script -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Form Validation</title>
+    <link rel="icon" type="image/png" href="favicon-r.png" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Sign Up Today</h1>
+      <!-- Form -->
+      <form id="form">
+        <!-- Full Name -->
+        <div class="form-group">
+          <label for="name">Full Name</label>
+          <input
+            type="text"
+            id="name"
+            placeholder="Full Name"
+            name="name"
+            required
+            minlength="3"
+            maxlength="100"
+          />
+        </div>
+        <!-- Phone Number -->
+        <div class="form-group">
+          <label for="phone">Phone Number</label>
+          <input
+            type="tel"
+            id="phone"
+            placeholder="555-555-5555"
+            name="phone"
+            required
+            pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+          />
+        </div>
+        <!-- Email -->
+        <div class="form-group">
+          <label for="email">Email Address</label>
+          <input
+            type="email"
+            id="email"
+            placeholder="email@address.com"
+            name="email"
+            required
+          />
+        </div>
+        <!-- Website URL -->
+        <div class="form-group">
+          <label for="website">Website URL</label>
+          <input
+            type="url"
+            id="website"
+            name="website"
+            placeholder="tomek-m-coder.github.io"
+            required
+          />
+        </div>
+        <!-- Password -->
+        <div class="form-group">
+          <label for="password1">Password</label>
+          <input
+            type="password"
+            id="password1"
+            placeholder="Create Password (Minimum 8 characters)"
+            required
+            pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$"
+            title="Please enter at least 1 captial letter, 1 lowercase letter, and 1 number."
+          />
+        </div>
+        <!-- Confirm Password -->
+        <div class="form-group">
+          <label for="password2">Confirm Password</label>
+          <input
+            type="password"
+            id="password2"
+            name="password"
+            placeholder="Confirm Password"
+            required
+            pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$"
+          />
+        </div>
+        <button type="submit">Register</button>
+      </form>
+      <!-- Error / Success Message -->
+      <div class="message-container">
+        <h3 id="message">
+          Do not Hesitate!
+        </h3>
+      </div>
+    </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
