--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <!-- Error / Success Message -->
       <div class="message-container">
         <h3 id="message">
-          Do not Hesitate!
+          Do not Hesitate! Do it!
         </h3>
       </div>
     </div>
